--- a/mvp/src/main/AndroidManifest.xml
+++ b/mvp/src/main/AndroidManifest.xml
@@ -4,6 +4,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="design_width"
+            android:value="1080" />
+        <meta-data
+            android:name="design_height"
+            android:value="1920" />
 
     </application>
 
