--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.1"
     defaultConfig {
         applicationId "com.tenghen.ireader"
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -22,6 +22,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.xhb:xbanner:1.2.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
