--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.jakewharton:butterknife:8.4.0'
@@ -31,8 +31,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
-
-
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
