添加QQ登录 微博登录

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets.main {
+        jniLibs.srcDirs = ['libs']  // <-- Set your folder here!
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:1.0.2'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.xhb:xbanner:1.2.2'
@@ -34,4 +38,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     testCompile 'junit:junit:4.12'
     compile project(':mvp')
+    compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/open_sdk_r5785_lite.jar')
 }
