--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,6 +143,9 @@
         <activity
             android:name=".ui.activity.DynamicActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.MoreCommentActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
