--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile files('libs/mta-sdk-1.6.2.jar')
     compile files('libs/open_sdk_r5785_lite.jar')
     compile files('libs/alipaySdk-20170922.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
