--- a/tenghen/src/main/AndroidManifest.xml
+++ b/tenghen/src/main/AndroidManifest.xml
@@ -173,6 +173,9 @@
         <activity
             android:name=".ui.activity.ChapterListActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.SettingActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
