--- a/tenghen/src/main/AndroidManifest.xml
+++ b/tenghen/src/main/AndroidManifest.xml
@@ -176,6 +176,9 @@
         <activity
             android:name=".ui.activity.SettingActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.UserBindActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
