--- a/tenghen/build.gradle
+++ b/tenghen/build.gradle
@@ -18,9 +18,9 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '23.0.1'
     defaultConfig {
-        applicationId "com.tenghen.ireader"
+        applicationId "com.liuyue.ireader"
         minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
